@@ -168,6 +168,7 @@ std::size_t hash_value(const ID& id);
 const ID        ID_FAIL(ID::ALL_ONES, ID::ALL_ONES);
 
 typedef std::vector<ID> Tuple;
+typedef std::vector<ID> PredicateList;
 
 DLVHEX_NAMESPACE_END
 
